fix ProjectProgress label text overlap SecondaryToolbar

--- a/src/projects/detail/components/ProjectProgress/ProjectProgress.scss
+++ b/src/projects/detail/components/ProjectProgress/ProjectProgress.scss
@@ -42,7 +42,7 @@
     line-height: inherit;
     padding-left: $base-unit*3;
     padding-right: $base-unit*3;
-    z-index: 10;
+    z-index: 2;
     overflow: hidden;
     white-space: nowrap;
 
@@ -78,7 +78,7 @@
     width: 8px;
     height: 8px;
     left: -22px;
-    z-index: 11;
+    z-index: 3;
     top: calc(50% - 4px);
   }
 
